--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.0",
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "swiper": "^11.2.6"
   }
 }
