💄 도감2차 작업업

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,13 @@
       "description": "설정파일 추가/수정"
     }
   ],
-  "gitmoji.onlyUseCustomEmoji": true
+  "gitmoji.onlyUseCustomEmoji": true,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/node_modules": false
+  }
 }
