--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "pokemon-tcg-sdk-typescript": "^1.3.4",
     "swiper": "^11.2.6"
   }
 }
