--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@types/three": "^0.176.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
     "globals": "^16.1.0",
@@ -19,6 +20,12 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "three": "^0.176.0"
+  },
+  "paths": {
+    "three/examples/*": [
+      "./node_modules/three/examples/*"
+    ]
   }
 }
