--- a/package.json
+++ b/package.json
@@ -21,14 +21,8 @@
   },
   "dependencies": {
     "swiper": "^11.2.6",
-    "three": "^0.176.0"
-  },
-  "paths": {
-    "three/examples/*": [
-      "./node_modules/three/examples/*"
-    ],
+    "three": "^0.176.0",
     "axios": "^1.9.0",
-    "pokemon-tcg-sdk-typescript": "^1.3.4",
-    "swiper": "^11.2.6"
+    "pokemon-tcg-sdk-typescript": "^1.3.4"
   }
 }
